--- a/Crypto+ML.ipynb
+++ b/Crypto+ML.ipynb
@@ -56,10 +56,10 @@
    "source": [
     "##Bybt API for Derivatives Data\n",
     "url = \"https://open-api.bybt.com/api/pro/v1/futures/funding_rates_chart?symbol=ETH\"\n",
-    "bybtKey = 'd0c68634386141048e01a25767f95f12'\n",
+    "bybtKey = ''\n",
     "payload = {}\n",
     "headers = {\n",
-    "  'bybtSecret': 'd0c68634386141048e01a25767f95f12'\n",
+    "  'bybtSecret': ''\n",
     "}\n",
     "\n",
     "response = requests.request(\"GET\", url, headers=headers, data = payload)\n",
